--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -90,7 +90,7 @@
 
     .box {
       @include box(1px);
-      margin: 40px 0;
+      margin: 40px;
     }
   }
 
@@ -108,7 +108,7 @@
       display: flex;
       justify-content: center;
       @include box(1px);
-      margin: 40px 0;
+      margin-top: 40px;
     }
   }
 
